bin/app/istio/manifests/test.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
spec:
  ports:
    - port: 8088
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-app
