bin/app/istio/manifests/test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-app
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
        - name: nginx-app
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: test
spec:
  ports:
    - port: 8088
      protocol: TCP
      targetPort: 80
  selector:
    app: nginx-app
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: nginx-gateway
  namespace: test
spec:
  selector:
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - test.val-istar-guo.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vsvc
  namespace: test
spec:
  hosts:
    - test.val-istar-guo.com
  gateways:
    - nginx-gateway
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: nginx-svc
            port:
              number: 8088
